force-app/main/default/objects/Equipment__c/Equipment__c.object-meta.xml
<CustomObject>
    <label>Equipment Request</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Equipment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Request</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>