force-app/main/default/objects/Equipment__c/fields/AFE__c.field-meta.xml
<CustomField>
    <fullName>AFE__c</fullName>
    <label>AFE #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>