force-app/main/default/objects/Equipment__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Equipment Request</relationshipLabel>
    <relationshipName>Equipment_Request</relationshipName>
    <trackHistory>false</trueHistory>
    <type>Lookup</type>
</CustomField>