force-app/main/default/objects/Equipment__c/fields/Count_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Count_Reserved__c</fullName>
    <label>Count Reserved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>