force-app/main/default/objects/Equipment__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Core Upgrade Kit</fullName>
            </value>
            <value>
                <fullName>Topper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>