force-app/main/default/objects/Equipment__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>Equipment_Name__r.Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model</label>
    <type>Text</type>
</CustomField>