force-app/main/default/objects/Equipment__c/fields/Net_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Net_Reserve__c</fullName>
    <formula>Count_Reserved__c -  Count_Shipped__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count Reserved - Count Shipped</inlineHelpText>
    <label>Net Reserve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>